--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2018"
 reqwest = { version = "0.11", features = ["json", "blocking"] }
 serde = { version = "1.0.126", features = ['derive'] }
 serde_json = "1.0.64"
+lazy_static = "1.4.0"
