Add some package fields to cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,10 @@
 [package]
 name = "steamwebapi"
+description = "Provides an API wrapper for the steam workshop interfaces (IPublishedFileService and ISteamRemoteStorage), with the addition of proxy and api key support"
+repository = "https://github.com/jackzmc/rs-steamwebapi/"
+license_file = "LICENSE"
+keywords = ["steamapi", "workshop", "steam_workshop"]
+categories = ["api-bindings"]
 version = "0.2.0"
 authors = ["Jackz <me@jackz.me>"]
 edition = "2018"
