--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "steamwebapi"
+name = "steam-workshop-api"
 description = "Provides an API wrapper for the steam workshop interfaces (IPublishedFileService and ISteamRemoteStorage), with the addition of proxy and api key support"
-repository = "https://github.com/jackzmc/rs-steamwebapi/"
+repository = "https://github.com/Jackzmc/rs-steam-workshop-api"
 license-file = "LICENSE"
 keywords = ["steamapi", "workshop", "steam_workshop"]
 categories = ["api-bindings"]
