--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ reqwest = { version = "0.12.5", features = ["json", "blocking"] }
 serde = { version = "1.0", features = ['derive'] }
 serde_json = "1.0.120"
 lazy_static = "1.5.0"
+log = "0.4.22"
